prevent overflow on status

--- a/client/modules/stalker/style.css
+++ b/client/modules/stalker/style.css
@@ -49,4 +49,7 @@
       #stalker .location {
         font-size: 2em;
         line-height: 40px;
+        width: 80%;
+        white-space: nowrap;
+        overflow: hidden;
       }
